RESOLVED FIXED52900
Web Inspector: ~InspectorResourceAgent crashes on closing inspected page.
https://bugs.webkit.org/show_bug.cgi?id=52900
Summary Web Inspector: ~InspectorResourceAgent crashes on closing inspected page.
Pavel Feldman
Reported 2011-01-21 08:52:44 PST
We should not access page / inspector client after inspectedPageDestroyed call on inspector controller.
Attachments
[PATCH] Proposed change (1.48 KB, patch)
2011-01-21 09:11 PST, Pavel Feldman
no flags
Pavel Feldman
Comment 1 2011-01-21 09:11:54 PST
Created attachment 79746 [details] [PATCH] Proposed change
WebKit Commit Bot
Comment 2 2011-01-21 14:01:01 PST
Comment on attachment 79746 [details] [PATCH] Proposed change Clearing flags on attachment: 79746 Committed r76392: <http://trac.webkit.org/changeset/76392>
WebKit Commit Bot
Comment 3 2011-01-21 14:01:06 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.