2011-01-21  Pavel Feldman  <pfeldman@chromium.org>

Reviewed by Yury Semikhatsky.

        Web Inspector: ~InspectorResourceAgent crashes on closing inspected page.
        https://bugs.webkit.org/show_bug.cgi?id=52900

        * inspector/InspectorController.cpp:
        (WebCore::InspectorController::~InspectorController):
        (WebCore::InspectorController::inspectedPageDestroyed):

Canonical link: https://commits.webkit.org/66627@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@76392 268f45cc-cd09-0410-ab3c-d52691b4dbfc